--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.parallel=true
 
 # Project
 group=io.github.thebluetropics
-version=0.1.0-alpha
+version=0.1.0
 
 # Maven
 artifact_name=example-mod
@@ -23,4 +23,4 @@ fabric_api_version=0.100.8+1.20.6
 mappings_version=1.20.6+build.3
 
 # Github
-github_packages_url=https://maven.pkg.github.com/thebluetropics/fabric-1.20.6-example-mod
+github_packages_url=https://maven.pkg.github.com/thebluetropics/fabric-example-mod
