--- a/gradle.properties
+++ b/gradle.properties
@@ -4,23 +4,23 @@ org.gradle.parallel=true
 
 # Project
 group=io.github.thebluetropics
-version=0.1.0-alpha
+version=0.1.0-alpha+1.20.6
 
 # Maven
 artifact_name=example-mod
 
 # Mod
-mod_id=examplemod
+mod_id=example_mod
 
 # Minecraft
-minecraft_version=1.20.6
+minecraft_version=1.21
 
 # Fabric
-fabric_loader_version=0.16.7
-fabric_api_version=0.100.8+1.20.6
+fabric_loader_version=0.16.9
+fabric_api_version=0.100.1+1.21
 
 # Mappings
-mappings_version=1.20.6+build.3
+mappings_version=1.21+build.9
 
 # Github
-github_packages_url=https://maven.pkg.github.com/thebluetropics/fabric-1.20.6-example-mod
+github_packages_url=https://maven.pkg.github.com/thebluetropics/fabric-example-mod
