--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.parallel=true
 
 # Project
 group=io.github.thebluetropics
-version=0.1.0-alpha+1.20.6
+version=0.1.0-alpha
 
 # Maven
 artifact_name=example-mod
@@ -16,7 +16,7 @@ mod_id=examplemod
 minecraft_version=1.20.6
 
 # Fabric
-fabric_loader_version=0.16.7
+fabric_loader_version=0.16.9
 fabric_api_version=0.97.8+1.20.6
 
 # Mappings
