--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ version=0.1.0-alpha
 artifact_name=example-mod
 
 # Mod
-mod_id=examplemod
+mod_id=example_mod
 
 # Minecraft
 minecraft_version=1.20.6
